Pull docker image when necessary for @QuarkusIntegrationTest
Fixes: #17730